Completed Step 1 TODO list fully, fixed typos.

--- a/project-diabetes-notebook.ipynb
+++ b/project-diabetes-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a32c58dc",
+   "id": "0fda2910",
    "metadata": {},
    "source": [
     "# Diabetes Readmission Project: Data Exploration and Preprocessing\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d008a8",
+   "id": "79fd84e4",
    "metadata": {},
    "source": [
     "\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fe80f69c",
+   "id": "a762f820",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "82686a99",
+   "id": "d850ef48",
    "metadata": {},
    "outputs": [
     {
@@ -130,14 +130,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f0d760b5",
+   "execution_count": 11,
+   "id": "a6f232c2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Inspecting the first few rows of the dataset:\n",
+      "   encounter_id  patient_nbr             race  gender      age weight  \\\n",
+      "0       2278392      8222157        Caucasian  Female   [0-10)      ?   \n",
+      "1        149190     55629189        Caucasian  Female  [10-20)      ?   \n",
+      "2         64410     86047875  AfricanAmerican  Female  [20-30)      ?   \n",
+      "3        500364     82442376        Caucasian    Male  [30-40)      ?   \n",
+      "4         16680     42519267        Caucasian    Male  [40-50)      ?   \n",
+      "\n",
+      "   admission_type_id  discharge_disposition_id  admission_source_id  \\\n",
+      "0                  6                        25                    1   \n",
+      "1                  1                         1                    7   \n",
+      "2                  1                         1                    7   \n",
+      "3                  1                         1                    7   \n",
+      "4                  1                         1                    7   \n",
+      "\n",
+      "   time_in_hospital  ... citoglipton insulin  glyburide-metformin  \\\n",
+      "0                 1  ...          No      No                   No   \n",
+      "1                 3  ...          No      Up                   No   \n",
+      "2                 2  ...          No      No                   No   \n",
+      "3                 2  ...          No      Up                   No   \n",
+      "4                 1  ...          No  Steady                   No   \n",
+      "\n",
+      "   glipizide-metformin  glimepiride-pioglitazone  metformin-rosiglitazone  \\\n",
+      "0                   No                        No                       No   \n",
+      "1                   No                        No                       No   \n",
+      "2                   No                        No                       No   \n",
+      "3                   No                        No                       No   \n",
+      "4                   No                        No                       No   \n",
+      "\n",
+      "   metformin-pioglitazone  change diabetesMed readmitted  \n",
+      "0                      No      No          No         NO  \n",
+      "1                      No      Ch         Yes        >30  \n",
+      "2                      No      No         Yes         NO  \n",
+      "3                      No      Ch         Yes         NO  \n",
+      "4                      No      Ch         Yes         NO  \n",
+      "\n",
+      "[5 rows x 50 columns]\n",
       "Diabetic Data Shape: (101766, 50)\n",
       "Missing Values Count:\n",
       " encounter_id                0\n",
@@ -334,12 +371,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Class distribution in the 'readmitted' column:\n",
+      "NO     54864\n",
+      ">30    35545\n",
+      "<30    11357\n",
+      "Name: readmitted, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "# Load datasets\n",
+    "# Loading datasets\n",
     "diabetic_data = pd.read_csv('diabetic_data.csv')\n",
     "ids_mapping = pd.read_csv('IDS_mapping.csv')\n",
+    "\n",
+    "# Inspecting the first few rows of the dataset to check data integrity\n",
+    "print(\"Inspecting the first few rows of the dataset:\")\n",
+    "print(diabetic_data.head())  # Display the first few rows\n",
     "\n",
     "# Initial exploration\n",
     "print(\"Diabetic Data Shape:\", diabetic_data.shape)\n",
@@ -356,15 +409,19 @@
     "kmeans = KMeans(n_clusters=3, random_state=42)\n",
     "diabetic_data['cluster'] = kmeans.fit_predict(numeric_data)\n",
     "\n",
-    "# Visualize clusters\n",
+    "# Visualizing clusters\n",
     "sns.countplot(data=diabetic_data, x='cluster')\n",
     "plt.title(\"Cluster Distribution\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Checking for class imbalance in the target variable 'readmitted'\n",
+    "print(\"\\nClass distribution in the 'readmitted' column:\")\n",
+    "print(diabetic_data['readmitted'].value_counts())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "57717049",
+   "id": "0b369855",
    "metadata": {},
    "source": [
     "## Step 2: Data Preprocessing & Feature Engineering\n",
@@ -374,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d992e866",
+   "id": "cffd11e4",
    "metadata": {},
    "source": [
     "## Replacing Placeholders (`?`) with `NaN`\n",
@@ -385,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d490ed40",
+   "id": "03fda030",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +470,7 @@
     "# Step: Replace '?' placeholders with NaN to standardize missing values\n",
     "print(\"Replacing '?' placeholders with NaN...\")\n",
     "\n",
-    "# Replaciung placeholders\n",
+    "# Replacing placeholders\n",
     "diabetic_data.replace('?', np.nan, inplace=True)\n",
     "\n",
     "# Checking for columns with missing values\n",
@@ -433,11 +490,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e086a227",
+   "cell_type": "markdown",
+   "id": "8d421ea3",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Step 3: Handling Missing Values\n",
     "\n",
@@ -450,15 +505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "bd842987",
+   "execution_count": 10,
+   "id": "c0ffa786",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dropped 'weight' column due to high proportion of missing values.\n",
       "Filled missing values in 'race' with the most frequent value: Caucasian\n",
       "Filled missing values in 'payer_code' with the most frequent value: MC\n",
       "Filled missing values in 'medical_specialty' with the most frequent value: InternalMedicine\n",
