Web integration for ML project.

--- a/project-diabetes-notebook.ipynb
+++ b/project-diabetes-notebook.ipynb
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1315456d",
+   "id": "a272d741",
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67877f4",
+   "id": "04261654",
    "metadata": {},
    "source": [
     "## Step 5: Model Training\n",
@@ -2163,7 +2163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81bf4b4",
+   "id": "4586dafa",
    "metadata": {},
    "source": [
     "### Loading Processed Data and Splitting into Train-Test Sets\n",
@@ -2174,7 +2174,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2bd4af9e",
+   "id": "317cc134",
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a615826",
+   "id": "b2639a22",
    "metadata": {},
    "source": [
     "### Model Training and Evaluation Function\n",
@@ -2220,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4ec912cc",
+   "id": "c47cd751",
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec88036",
+   "id": "9aadc22f",
    "metadata": {},
    "source": [
     "### Key Findings\n",
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9451931",
+   "id": "b3cdcd15",
    "metadata": {},
    "source": [
     "### Improving Model Performance\n",
@@ -2477,7 +2477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b542a96c",
+   "id": "33ea8c72",
    "metadata": {},
    "source": [
     "### Step 1: Addressing Class Imbalance with Class Weights and SMOTE\n",
@@ -2490,7 +2490,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1494657a",
+   "id": "b8d4de60",
    "metadata": {},
    "outputs": [
     {
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7253929f",
+   "id": "76077957",
    "metadata": {},
    "source": [
     "### Key Findings After Step 1: Addressing Class Imbalance with Class Weight Adjustments\n",
@@ -2658,7 +2658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02c87a11",
+   "id": "2249bc36",
    "metadata": {},
    "source": [
     "### Step 2: Hyperparameter Tuning with Random Search\n",
@@ -2669,7 +2669,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "222a57b6",
+   "id": "79260d1f",
    "metadata": {},
    "outputs": [
     {
@@ -2797,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "45ec66d9",
+   "id": "08372dc7",
    "metadata": {},
    "outputs": [
     {
@@ -2980,7 +2980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44821ce5",
+   "id": "4796cfed",
    "metadata": {},
    "source": [
     "### Step 3: Evaluating Tuned Models\n",
@@ -2991,7 +2991,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d2835713",
+   "id": "7d5115f2",
    "metadata": {},
    "outputs": [
     {
@@ -3142,7 +3142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a159e82",
+   "id": "20aca25c",
    "metadata": {},
    "source": [
     "Interesting findings: \n",
@@ -3154,7 +3154,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "3d2e66f3",
+   "id": "2c29f9b2",
    "metadata": {},
    "outputs": [
     {
@@ -3257,7 +3257,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8ed239ee",
+   "id": "8ff55b91",
    "metadata": {},
    "outputs": [
     {
@@ -3429,7 +3429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ee393b",
+   "id": "059d1863",
    "metadata": {},
    "source": [
     "Interesting findings:\n",
@@ -3442,7 +3442,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "68d5ae8b",
+   "id": "271a2e51",
    "metadata": {},
    "outputs": [
     {
@@ -3592,7 +3592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cc74df0",
+   "id": "7b7eb77a",
    "metadata": {},
    "source": [
     "## Final Performance Summary of Tuned Models & Interesting Findings\n",
@@ -3611,7 +3611,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c7800f63",
+   "id": "e568abed",
    "metadata": {},
    "outputs": [
     {
@@ -3682,7 +3682,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b653a087",
+   "id": "c8677973",
    "metadata": {},
    "outputs": [
     {
@@ -3748,6 +3748,82 @@
     "plt.xlabel(\"Average Feature Importance\")\n",
     "plt.ylabel(\"Feature\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "032b196f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model successfully saved as 'trained_model.pkl'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save the model\n",
+    "joblib.dump(best_xgb_model, 'trained_model.pkl')\n",
+    "\n",
+    "# Print confirmation message\n",
+    "print(\"Model successfully saved as 'trained_model.pkl'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b01898c4",
+   "metadata": {},
+   "source": [
+    "## Retraining the model for the app\n",
+    "by filtering the dataset to include only several features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "cef0947e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model for the app successfully saved as 'trained_model_7_features.pkl'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from xgboost import XGBClassifier\n",
+    "import joblib\n",
+    "\n",
+    "# Load your original dataset\n",
+    "data = pd.read_csv(\"preprocessed_diabetic_data_final.csv\")\n",
+    "\n",
+    "# Select only the 7 important features and the target column\n",
+    "selected_features = ['age', 'time_in_hospital', 'num_lab_procedures', 'num_medications', \n",
+    "                     'number_emergency', 'number_inpatient', 'number_diagnoses']\n",
+    "X = data[selected_features]\n",
+    "y = data['readmitted']\n",
+    "\n",
+    "# Split the data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize and train the model\n",
+    "model = XGBClassifier(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Save the trained model for use in Streamlit\n",
+    "joblib.dump(model, 'trained_model_7_features.pkl')\n",
+    "\n",
+    "# Print confirmation message\n",
+    "print(\"Model for the app successfully saved as 'trained_model_7_features.pkl'\")"
    ]
   }
  ],
