Corrected a bit export for the app part.

--- a/project-diabetes-notebook.ipynb
+++ b/project-diabetes-notebook.ipynb
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "pip install dash flask plotly requests scikit-learn seaborn"
+    "pip install plotly requests scikit-learn seaborn"
    ]
   },
   {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a272d741",
+   "id": "5f6850c5",
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04261654",
+   "id": "24bbb7b9",
    "metadata": {},
    "source": [
     "## Step 5: Model Training\n",
@@ -2163,7 +2163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4586dafa",
+   "id": "db9153f2",
    "metadata": {},
    "source": [
     "### Loading Processed Data and Splitting into Train-Test Sets\n",
@@ -2174,7 +2174,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "317cc134",
+   "id": "ae371fc2",
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2639a22",
+   "id": "1a058629",
    "metadata": {},
    "source": [
     "### Model Training and Evaluation Function\n",
@@ -2220,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c47cd751",
+   "id": "b0816be3",
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aadc22f",
+   "id": "9f537b1a",
    "metadata": {},
    "source": [
     "### Key Findings\n",
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3cdcd15",
+   "id": "712007a1",
    "metadata": {},
    "source": [
     "### Improving Model Performance\n",
@@ -2477,7 +2477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33ea8c72",
+   "id": "77f1169b",
    "metadata": {},
    "source": [
     "### Step 1: Addressing Class Imbalance with Class Weights and SMOTE\n",
@@ -2490,7 +2490,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b8d4de60",
+   "id": "1cc73e1d",
    "metadata": {},
    "outputs": [
     {
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76077957",
+   "id": "b1bd9d7e",
    "metadata": {},
    "source": [
     "### Key Findings After Step 1: Addressing Class Imbalance with Class Weight Adjustments\n",
@@ -2658,7 +2658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2249bc36",
+   "id": "379c7912",
    "metadata": {},
    "source": [
     "### Step 2: Hyperparameter Tuning with Random Search\n",
@@ -2669,7 +2669,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "79260d1f",
+   "id": "85b28687",
    "metadata": {},
    "outputs": [
     {
@@ -2797,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "08372dc7",
+   "id": "99420313",
    "metadata": {},
    "outputs": [
     {
@@ -2980,7 +2980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4796cfed",
+   "id": "efce912f",
    "metadata": {},
    "source": [
     "### Step 3: Evaluating Tuned Models\n",
@@ -2991,7 +2991,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "7d5115f2",
+   "id": "007880a6",
    "metadata": {},
    "outputs": [
     {
@@ -3142,7 +3142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20aca25c",
+   "id": "391781f0",
    "metadata": {},
    "source": [
     "Interesting findings: \n",
@@ -3154,7 +3154,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "2c29f9b2",
+   "id": "7d7b3460",
    "metadata": {},
    "outputs": [
     {
@@ -3257,7 +3257,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8ff55b91",
+   "id": "d013d352",
    "metadata": {},
    "outputs": [
     {
@@ -3429,7 +3429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "059d1863",
+   "id": "20a46906",
    "metadata": {},
    "source": [
     "Interesting findings:\n",
@@ -3442,7 +3442,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "271a2e51",
+   "id": "82cf3eae",
    "metadata": {},
    "outputs": [
     {
@@ -3592,7 +3592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b7eb77a",
+   "id": "8bd4ddc5",
    "metadata": {},
    "source": [
     "## Final Performance Summary of Tuned Models & Interesting Findings\n",
@@ -3611,7 +3611,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e568abed",
+   "id": "d3653721",
    "metadata": {},
    "outputs": [
     {
@@ -3682,7 +3682,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c8677973",
+   "id": "81ce93ee",
    "metadata": {},
    "outputs": [
     {
@@ -3753,7 +3753,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "032b196f",
+   "id": "f856be32",
    "metadata": {},
    "outputs": [
     {
@@ -3776,7 +3776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b01898c4",
+   "id": "2cb65fe6",
    "metadata": {},
    "source": [
     "## Retraining the model for the app\n",
@@ -3786,7 +3786,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "cef0947e",
+   "id": "2e48baed",
    "metadata": {},
    "outputs": [
     {
@@ -3824,6 +3824,86 @@
     "\n",
     "# Print confirmation message\n",
     "print(\"Model for the app successfully saved as 'trained_model_7_features.pkl'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "65954708",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model retrained and saved as 'trained_model_7_features.pkl'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from xgboost import XGBClassifier  # Or use your preferred model\n",
+    "\n",
+    "# Selecting only the primary features\n",
+    "selected_features = ['age', 'time_in_hospital', 'num_lab_procedures', \n",
+    "                     'num_medications', 'number_emergency', \n",
+    "                     'number_inpatient', 'number_diagnoses']\n",
+    "\n",
+    "# Creating new datasets with only the selected features\n",
+    "X_selected = diabetic_data[selected_features]\n",
+    "y = diabetic_data['readmitted']  # Assuming readmitted is the target column\n",
+    "\n",
+    "# Train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_selected, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Defining, training, saving the model\n",
+    "model = XGBClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "joblib.dump(model, 'trained_model_7_features.pkl')\n",
+    "print(\"Model retrained and saved as 'trained_model_7_features.pkl'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "9f0a46f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model trained on important features saved as 'retrained_model_important_features.pkl'\n",
+      "Scaler for important features saved as 'scaler_important_features.pkl'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "# Selecting the top features identified from the analysis\n",
+    "important_features = ['age', 'time_in_hospital', 'num_lab_procedures', \n",
+    "                      'num_medications', 'number_emergency', 'number_inpatient', 'number_diagnoses']\n",
+    "\n",
+    "# Subsetting your training data\n",
+    "X_train_subset = X_train[important_features]\n",
+    "X_test_subset = X_test[important_features]\n",
+    "\n",
+    "# Initializing and train the model\n",
+    "model = XGBClassifier(random_state=42)\n",
+    "model.fit(X_train_subset, y_train)\n",
+    "\n",
+    "# Saving the retrained model\n",
+    "joblib.dump(model, 'retrained_model_important_features.pkl')\n",
+    "print(\"Model trained on important features saved as 'retrained_model_important_features.pkl'\")\n",
+    "\n",
+    "# Saving the scaler after fitting it to the subset data\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train_subset)\n",
+    "joblib.dump(scaler, 'scaler_important_features.pkl')\n",
+    "print(\"Scaler for important features saved as 'scaler_important_features.pkl'\")"
    ]
   }
  ],
